[package]
name = "codex-environment"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_environment"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-utils-absolute-path = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
