[package]
name = "codex-feedback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
codex-protocol = { workspace = true }
sentry = { version = "0.46" }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
