[package]
name = "codex-mcp-client"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
mcp-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
