[package]
name = "codex-network-proxy-cli"
edition = "2024"
version = { workspace = true }
license.workspace = true

[[bin]]
name = "codex-network-proxy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
codex-network-proxy = { path = "../network-proxy" }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
